[gd_scene load_steps=2 format=3 uid="uid://splitdlg001"]

[ext_resource type="Script" path="res://scenes/ui/inventory/split_dialog.gd" id="1_script"]

[node name="SplitDialog" type="Control"]
z_index = 60
layout_mode = 3
anchors_preset = 0
offset_right = 250.0
offset_bottom = 120.0
script = ExtResource("1_script")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(250, 120)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Split Stack"
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="Panel/VBoxContainer"]
layout_mode = 2
min_value = 1.0
max_value = 99.0
value = 1.0

[node name="QuantityLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Split: 1 / Keep: 98"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ConfirmButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Split"

[node name="CancelButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Cancel"
